--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -293,11 +293,11 @@
       statusEffects:
       - statusEffect: StatusEffectMinorOxygenationCryoxadone
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 213.0
       - statusEffect: StatusEffectHeartStabilizationCryoxadone
         conditions:
-        - !type:Temperature
+        - !type:TemperatureCondition
           max: 213.0
       effects:
         - !type:ModifyHeartDamage
@@ -313,7 +313,7 @@
         - !type:ModifyLungDamage
           amount: -0.3
           conditions:
-          - !type:Temperature
+          - !type:TemperatureCondition
             max: 213.0
   # WL species start
           - !type:MetabolizerTypeCondition
@@ -322,7 +322,7 @@
   # WL species end
         - !type:EvenHealthChange
           conditions:
-          - !type:Temperature
+          - !type:TemperatureCondition
             max: 213.0
   # WL species start
           - !type:MetabolizerTypeCondition
@@ -2113,7 +2113,7 @@
         - !type:ReduceRotting
           seconds: 20
           conditions:
-          - !type:Temperature
+          - !type:TemperatureCondition
             max: 213.0
         # End Offbrand - Derotting moved to necrosol
         - !type:HealthChange
@@ -2188,15 +2188,17 @@
         boozePower: 1
       - !type:Jitter
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Mannitol
           min: 10.5
       - !type:Emote
         emote: Scream
         probability: 0.2
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Mannitol
           min: 10.5
-      - !type:ChemVomit
+      - !type:Vomit
         conditions:
         - !type:ReagentCondition
           reagent: Mannitol
@@ -2204,7 +2206,8 @@
         probability: 0.1
       - !type:HealthChange
         conditions:
-        - !type:ReagentThreshold
+        - !type:ReagentCondition
+          reagent: Mannitol
           min: 10.5
         damage:
           types:
